<resources>
    <string name="app_name">Nails Schedule</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_gallery">Galeria de Unhas</string>
    <string name="gallery">Galeria</string>
    <string name="title_schedule">Agendamento</string>
    <string name="title_scheduled">Agendado</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>

    <string name="facebook_app_id">170415295271055</string>
    <string name="fb_login_protocol_scheme">fb170415295271055</string>

    <!-- Gallery Fragment -->
    <string name="add_photo">Galeria vazia</string>
    <string name="gallery_message">Que tal preencher esta Galeria com suas fotos de unhas prediletas?</string>
    <string name="choose_photos">Escolher fotos</string>
    <string name="add_more_photos">Adicione mais Fotos</string>
    <string name="trash">lixeira</string>
    <string name="no_selected_photo">Não há nenhuma foto selecionada</string>
    <string name="photo_deleted">Foto apagada</string>
    <string name="photos_deleted">Fotos apagadas</string>
    <string name="all_photos_deleted">Todas as fotos foram apagadas</string>
    <string name="unscheduled_time">Remarque outro horário, pois seu horário foi desmarcado!</string>

    <!-- Scheduling Fragment-->
    <string name="service">Digite o Serviço</string>
    <string name="scheduled_time">Horário agendado: %s</string>
    <string name="select_the_hour">->Selecione a hora</string>
    <string name="successful_scheduling">Agendamento salvo com sucesso!!!</string>
    <string name="error_scheduling">Erro ao tentar salvar o usuário. Por favor, tente novamente.</string>
    <string name="error_storage">Erro ao tentar recuperar imagem. Por favor, arraste de cima da tela para baixo para que seja feita novamente a atualização da mesma.</string>
    <string name="error_storage_reference">Erro ao recuperar referência da imagem. Por favor, arraste de cima da tela para baixo para que seja feita novamente a atualização da mesma.</string>
    <string name="save">Salvar</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="message_about_remark">Você já possui uma data e horário agendados(%s h do dia %s). Deseja remarcar?</string>
    <string name="choose_photo">Escolher foto</string>
    <string name="empty_name">Preencha o Nome</string>
    <string name="empty_service">Preencha o Serviço</string>
    <string name="empty_date">Preencha a Data</string>
    <string name="empty_time">Preencha a Hora</string>
    <string name="empty_photo">Selecione a foto</string>
    <string name="your_name_and_surname">Digite seu nome e sobrenome</string>
    <string name="information_photo_change">Caso queira trocar a foto, então clique nela:</string>
    <string name="select_date_that_wish_to_mark">Selecione a data que deseja marcar:</string>
    <string name="you_are_rebooking">"Você está refazendo a marcação"</string>
    <string name="you_are_another_rebooking">"Você está fazendo outra marcação"</string>
    <string name="unavailable_time">Este horário não está mais disponível. Por favor selecione outro.</string>
    <string name="select_time">Selecione o Horário</string>
    <string name="data_without_available_hour">Por favor <b>escolha outra data</b>, pois essa não possui horários disponíveis.</string>

    <!-- Scheduled Fragment-->
    <string name="mark">mark</string>
    <string name="lb_client">Cliente</string>
    <string name="lb_service">Serviço:</string>
    <string name="lb_date">Data:</string>
    <string name="lb_time">Horário:</string>
    <string name="edit_schedule">Editar agendamento</string>
    <string name="no_schedules">Você não possui horário agendado</string>
    <string name="add_or_update">Observação: Caso já possua um agendamento, estará atualizando o mesmo.</string>
    <string name="explanation_about_choose_photo">Deixe-me ver a foto do serviço que você quer realizar. Escolha um dos métodos abaixo para obter a foto:</string>

    <!-- Photo Activity-->
    <string name="title">Serviço que será realizado</string>
    <string name="photo">Visualização da foto</string>

    <!--Login Activity -->
    <string name="login_failed">Falha ao logar. Tente novamente, por favor.</string>
    <string name="btn_client">Cliente</string>
    <string name="btn_professional">Profissional</string>
    <string name="description">Antes de lhe apresentar as opções de login, deixe-me saber que tipo de usuário do App é você:</string>
    <string name="client_or_professional_again"><u>Escolha novamente se você é cliente ou proprietário.</u></string>

    <!--Professional Activity -->
    <string name="professional_title">Clique no dia que quiser e veja os horários:</string>
    <string name="all_free">Todos horários livres</string>
    <string name="available">Horário Disponível</string>
    <string name="unavailable">Indisponível</string>
    <string name="general_schedule">Agenda Geral</string>
    <string name="see_schedule">Ver agendamento</string>
    <string name="user_name"><b>Nome:</b> %s</string>
    <string name="user_service"><b>Serviço:</b> %s</string>
    <string name="user_time"><b>Hora marcada:</b> %s</string>
    <string name="scheduled_deleted">Obs: O agendamento foi excluído!</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="title_email_and_password">Digite seu email e senha de proprietário</string>
    <string name="access">Acessar</string>
    <string name="empty_email">Preencha o Nome</string>
    <string name="empty_password">Preencha o Nome</string>
    <string name="incorrect_information">Você é um proprietário? Alguma informação está incorreta.</string>
    <string name="professional_profile">Perfil profissional</string>

    <!-- Menu nav -->
    <string name="logout">Deslogar</string>
    <string name="get_out">Sair</string>
    <string name="login_title">Agende horários e guarde as fotos de suas unhas favoritas.\nCom o App Nails schedule não existem mais dúvidas de quais horários estão disponíveis e de qual serviço você vai querer que seja realizado.</string>

    <string name="delete_schedule">Deletar agendamento</string>

    <string name="no_internet">Você está sem internet. Por favor, ative a internet.</string>

</resources>